...


    <!-- Follow request EditText, takes username of another user -->


    <EditText
        android:id="@+id/user_follow_editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/follow_instruction_textView"
        app:layout_constraintStart_toStartOf="@id/follow_someone_textView"
        app:layout_constraintEnd_toEndOf="@id/follow_someone_textView"
...
        android:textColorHint="?attr/colorSecondaryText"/>


    <!-- send request button -->

    <Button
        android:id="@+id/send_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/user_follow_editText"
        app:layout_constraintStart_toStartOf="@id/follow_someone_textView"
        app:layout_constraintEnd_toEndOf="@id/follow_someone_textView"
...
