...
            android:text="current and future posts?"/>


        <!-- ALLOW/DENY BUTTONS -->

        <Button
            android:id="@+id/allow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/allow_textView3"
            app:layout_constraintStart_toStartOf="@id/follow_event_title"
            app:layout_constraintEnd_toEndOf="@id/follow_event_title"
            android:layout_marginTop="16dp"

            android:text="Allow"/>


        <Button
            android:id="@+id/deny_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/allow_button"
            app:layout_constraintStart_toStartOf="@id/follow_event_title"
            app:layout_constraintEnd_toEndOf="@id/follow_event_title"
            android:layout_marginTop="16dp"
...
