...
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- create Timeline menu item -->

            <ImageButton
                android:id="@+id/timeline_menu_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:scaleType="fitStart"
                android:layout_marginLeft="8dp"

                android:src="@drawable/ic_featured_play_list_white_32dp"
                app:layout_constraintBottom_toTopOf="@id/timeline_textView"
                app:layout_constraintEnd_toStartOf="@+id/inbox_menu_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/timeline_textView"
...
