...
           android:textStyle="bold"
           android:textSize="18sp"
           android:textColor="#000000"
           android:text="New follow request"/>

        <TextView
            android:id="@+id/follow_request_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/follow_request_notification"
            app:layout_constraintStart_toStartOf="@id/follow_request_notification"
            android:layout_marginTop="6dp"
...
